fix li-team-member gap

--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,10 @@ img {
 }
 
 .text-center {
-  padding: 32px 0
+  display: flex;
+  flex-direction: column;
+  padding: 32px 0;
+  gap: 8px;
 }
 .text-center .title-third,
 .text-center .wt-we-do-paragraph {
@@ -259,7 +262,7 @@ img {
   display: flex;
   gap:24px;
   justify-content: center;
-  margin-bottom: 32px;
+
 }
 .social-icons-item {
   width: 40px;
